--- a/src/view/components/ProductCard/style.css
+++ b/src/view/components/ProductCard/style.css
@@ -1,5 +1,5 @@
 .cardpage {
-  width: 262px;
+  width: 210px;
   display: block;
   background-color: #fff;
 }
@@ -12,6 +12,20 @@
   width: 100%;
   position: relative;
   overflow: hidden;
+}
+
+.cardpage-body_badge {
+  width: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.cardpage-body img {
+  object-fit: cover;
 }
 
 .cardpage-body img:hover~.popup {
@@ -35,6 +49,10 @@
 
 .bgc-grey {
   background-color: #f7f7f7;
+}
+
+.checked {
+  color: orange;
 }
 
 .cardpage-footer p {
