--- a/src/view/page/LandingPage/Carousel/style.css
+++ b/src/view/page/LandingPage/Carousel/style.css
@@ -14,6 +14,7 @@
     font-weight: normal;
     letter-spacing: 1px;
 }
+
 /* Animation 1 */
 .animation-slideToLeft {
     position: relative;
@@ -21,9 +22,15 @@
 }
 
 @keyframes leftSlide {
-    0%   {left:200px}
-    25%  {left:0px}
+    0% {
+        left: 200px
+    }
+
+    25% {
+        left: 0px
+    }
 }
+
 /* Animation 2 */
 .animation-slideToRight {
     position: relative;
@@ -31,31 +38,55 @@
 }
 
 @keyframes rightSlide {
-    0%   {right:500px}
-    25%  {right:0px}
+    0% {
+        right: 500px
+    }
+
+    25% {
+        right: 0px
+    }
 }
+
 /* Animation 3 */
 .animation-zoom {
     position: relative;
-    animation: zoom 4s ease-in-out; 
+    animation: zoom 4s ease-in-out;
 }
 
 @keyframes zoom {
-    0%   {font-size: 5px}
-    25%  {font-size: 24px}
+    0% {
+        font-size: 5px
+    }
+
+    25% {
+        font-size: 24px
+    }
 }
+
 /* Animation 4 */
 .animation-bounce {
     position: relative;
-    animation: bounce 3s ease-in-out; 
+    animation: bounce 3s ease-in-out;
 }
 
 @keyframes bounce {
-    0%   {font-size: 5px}
-    25%  {font-size: 30px}
-    50%  {font-size: 28px}
-    75%  {font-size: 30px}
+    0% {
+        font-size: 5px
+    }
+
+    25% {
+        font-size: 30px
+    }
+
+    50% {
+        font-size: 28px
+    }
+
+    75% {
+        font-size: 30px
+    }
 }
+
 /* Animation 4 */
 .animation-btn {
     position: relative;
@@ -63,9 +94,15 @@
 }
 
 @keyframes topUp {
-    0%   {top: 200px}
-    25%  {top: 0}
+    0% {
+        top: 200px
+    }
+
+    25% {
+        top: 0
+    }
 }
+
 /* End animation */
 
 .new-carousel-caption p {
@@ -73,4 +110,42 @@
     font-family: Roboto, "Helvetica Neue";
     font-weight: 600;
     letter-spacing: 1px;
+}
+
+/* Static background */
+.carousel-bg {
+    width: 100%;
+    height: 350px;
+    background-image: url('assets/images/bkg_breadcrumbs.jpg');
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: row;
+}
+
+.carousel-bg_group {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 13%;
+    margin: auto;
+}
+
+.carousel-bg_icons {
+    color: black;
+}
+
+.carousel-bg_icons:hover {
+    color: #ff0055;
+}
+
+.carousel-bg_text {
+    text-transform: capitalize;
+    color: #ff0055;
+    display: inline-block;
+    font-size: 14px;
+    line-height: 16px;
 }
