--- a/src/view/page/LandingPage/Featured/ProductItem/style.css
+++ b/src/view/page/LandingPage/Featured/ProductItem/style.css
@@ -1,3 +1,89 @@
-.productItem {}
+.productItem {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 5rem 11.5rem;
+}
 
-.productItem-information {}
+.productItem-information {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.information-groupInfo {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 0 0 20rem 0;
+}
+
+.information-groupInfo h3 {
+    color: #292929;
+    font-size: 18px;
+    font-weight: 500;
+    margin: 0 0 1.5rem 0;
+}
+
+.information-groupInfo span {
+    color: #292929;
+    font-weight: 600;
+    margin: 1.5rem 0 0 0;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.information-groupInfo ul {
+    margin: 40px 0;
+    margin-bottom: 25px;
+    padding-top: 28px;
+    font-weight: 600;
+    color: #292929;
+    border-top: 1px solid #ececec;
+    list-style: none;
+    padding-left: 0;
+}
+
+.information-groupInfo li {
+    line-height: 22px;
+    padding: 10px 0;
+}
+
+.groupInfo-quantity {
+    display: flex;
+    flex-direction: row;
+}
+
+.groupInfo-quantity button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0;
+}
+
+.groupInfo-quantity .input-component input {
+    border-radius: 0;
+    width: 4rem;
+    height: 3rem;
+    margin: 0 1rem 0 0;
+}
+
+.productItem-description {
+    width: 100%;
+    margin-top: 60px;
+    border-top: 1px solid #ebebeb;
+    padding-top: 60px;
+}
+
+.productItem-description h4 {
+    font-size: 20px;
+    text-transform: capitalize;
+    font-weight: 500;
+    color: #292929;
+    text-align: center;
+}
