--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,21 @@ body {
   background-color: #fff;
 }
 
+body::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 5px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #292929;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #929292;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
+  color: #292929;
+  font-weight:500;
 }
