--- a/src/view/components/layout/Subscribers/style.css
+++ b/src/view/components/layout/Subscribers/style.css
@@ -1,7 +1,7 @@
 .subscribers {
     text-align: center;
     border-top: 1px solid #ebebeb;
-    padding: 65px 0;
+    padding: 4rem 0;
 }
 
 .subscribers p {
@@ -27,6 +27,14 @@
     align-items: center;
     padding: 2rem 0 0 0;
     position: relative;
+}
+
+.subscribers-inputGroup .input-component {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 41%;
 }
 
 .subscribers-inputGroup .input-component input {
