--- a/src/view/page/LandingPage/Carousel/style.css
+++ b/src/view/page/LandingPage/Carousel/style.css
@@ -128,9 +128,9 @@
 .carousel-bg_group {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    width: 15%;
+    width: 100%;
     margin: auto;
 }
 
