--- a/src/view/components/layout/Header/Cart/CartBody/Product/style.css
+++ b/src/view/components/layout/Header/Cart/CartBody/Product/style.css
@@ -23,9 +23,10 @@
 }
 
 .product-content_sum {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -34,4 +35,11 @@
     font-size: 18px !important;
     line-height: 2.4rem;
     display: inline-block;
+}
+
+.content-sum_icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
 }
