--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,8 @@ h1, h2, h3, h4, h5, h6 {
   color: #292929;
   font-weight:500;
 }
+
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+  padding: 0 !important;
+  margin: 0 !important;
+}
