--- a/src/view/components/layout/Header/Cart/CartBody/Product/style.css
+++ b/src/view/components/layout/Header/Cart/CartBody/Product/style.css
@@ -15,11 +15,13 @@
     margin: 0 0 0 1rem;
 }
 
-.product-content p {
+.product-content a {
     display: block;
     line-height: 18px;
     color: #292929;
     font-weight: bold;
+    text-decoration: none;
+    margin: 0 0 1rem 0;
 }
 
 .product-content_sum {
