--- a/src/view/page/LandingPage/Checkout/style.css
+++ b/src/view/page/LandingPage/Checkout/style.css
@@ -1,7 +1,7 @@
-.table-icons {
-    cursor: pointer;
-}
-
 .checkout {
     padding: 0 11.5rem !important;
+}
+
+.checkout-banner .sub-name {
+    font-weight: bold;
 }
