--- a/src/view/components/layout/Header/style.css
+++ b/src/view/components/layout/Header/style.css
@@ -48,10 +48,16 @@
     font-family: 'Shizuru', cursive;
     padding: 0 0 10px 0;
     letter-spacing: 7px;
+    text-decoration: none;
     text-shadow: 10px 10px 25px rgb(81, 67, 21);
+    color: #292929;
 }
 
-.header-logo_main {
+.header-logo:hover {
+    color: #292929;
+}
+
+.header-logo span {
     font-weight: 600;
     padding: 0 10px 0 0;
 }
