--- a/src/view/components/layout/RegisterModal/style.css
+++ b/src/view/components/layout/RegisterModal/style.css
@@ -16,15 +16,14 @@
 }
 
 .register-modal_header h2 {
-    font-weight: 600;
+    font-weight: 500;
     color: #292929;
     display: inline-block;
     padding: 0 0 1rem 0;
 }
 
 .register-modal_form {
-    width: 100%;
-    overflow-y: auto;
+    width: 100%;;
     padding: 2rem 0 0 0;
 }
 
