--- a/src/view/components/base/ProductCard/Popup/style.css
+++ b/src/view/components/base/ProductCard/Popup/style.css
@@ -7,14 +7,32 @@
     margin: 0 1rem;
     background-color: #fff;
     position: absolute;
-    pointer-events:auto;
-    bottom: 0;
-    /* animation: topup 5s ease; */
-    /* transition: bottom 2s */
-}
-
-/* .popup:hover {
-    bottom: 2rem;
+    bottom: 11rem;
+    opacity: 0;
+    backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+    transform: translateY(25px) translateZ(0);
+  -webkit-transform: translateY(25px) translateZ(0);
+  }
+  /* animation: topup 5s ease; */
+  /* transition: bottom 2s */
+  
+/* .popup {
+  position: absolute;
+  left: 20px;
+  right: 20px;
+  background: #fff;
+  box-shadow: -1px 0px 1px 0px rgb(0 0 0 / 10%);
+  bottom: 20px;
+  padding: 12px 5px 12px 10px;
+  text-align: center;
+  opacity: 0;
+  transform: translateY(25px) translateZ(0);
+  -webkit-transform: translateY(25px) translateZ(0);
+  perspective: 800px;
+  -webkit-perspective: 800px;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 } */
 
 @keyframes topup {
