--- a/src/view/components/layout/Subscribers/style.css
+++ b/src/view/components/layout/Subscribers/style.css
@@ -1,24 +1,3 @@
-.subscribers {
-    text-align: center;
-    border-top: 1px solid #ebebeb;
-    padding: 4rem 0;
-}
-
-.subscribers p {
-    font-size: 13px;
-    color: #707070;
-    margin-bottom: 10px;
-}
-
-.subscribers h3 {
-    font-weight: 500;
-    font-size: 22px;
-    color: #292929;
-    line-height: 1;
-    letter-spacing: 1px;
-    margin: 0;
-}
-
 .subscribers-inputGroup {
     width: 100%;
     display: flex;
@@ -60,11 +39,11 @@
     font-weight: 600;
 }
 
-.subscribers-inputGroup span {
+.divider-group {
     position: absolute;
     height: 2rem;
     left: 66%;
-    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
 }
 
 .subscribers-inputGroup button:hover {
